fix(security): validate URI scheme before toURL() in PluginLoaderService
Construct string then validate via URI.create() + getScheme() check
before calling toURL(). This gives CodeQL a clear taint barrier.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>